--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>portfolio</title>
+</head>
+  <body>
+  <div>
   <h1>프로젝트 수행 이력</h1>
   <div>
     <table>
@@ -93,3 +102,6 @@
     </table>
   </div>
 </div>
+</body>
+</html>
+
