--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </tr>
             <tr>
         <td>데모</td>
-        <td><img src="./imgs/pj1_img.png"/></td>
+        <td><img style="width: 100%" src="./imgs/pj1_img.png"/></td>
       </tr>
     </table>
     <table>
