--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </tr>
             <tr>
         <td>데모</td>
-        <td><video src="./imgs/pj1.mp4" width="100%"/></td>
+        <td><video src="./imgs/pj1.mp4" width="100%" controls /></td>
       </tr>
     </table>
     <table>
