--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
   <body>
+    <a href="./index_eng.html">English</a>
+    <a href="./index.html">한국어</a>
   <div>
   <h1>프로젝트 수행 이력</h1>
   <div>
