--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
   <body>
+    <div style="text-align:right">
     <a href="./index_eng.html">English</a>
+    <div> / </div>
     <a href="./index.html">한국어</a>
+    </div>
   <div>
   <h1>프로젝트 수행 이력</h1>
   <div>
