--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
   <body>
     <div style="text-align:right">
-    <a href="./index_eng.html">English</a>
-    <div> / </div>
     <a href="./index.html">한국어</a>
+    <span> / </span>
+    <a href="./index_eng.html">English</a>
     </div>
   <div>
   <h1>프로젝트 수행 이력</h1>
