--- a/index_eng.html
+++ b/index_eng.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
   <body>
+    <div style="text-align:right">
+    <a href="./index.html">한국어</a>
+    <span> / </span>
+    <a href="./index_eng.html">English</a>
+    </div>
   <div>
   <h1>프로젝트 수행 이력</h1>
   <div>
@@ -38,7 +43,7 @@
       </tr>
             <tr>
         <td>데모</td>
-        <td><video src="./imgs/pj1.mp4" width="%" controls /></td>
+        <td><video src="./imgs/pj1.mp4" width="100%" controls /></td>
       </tr>
     </table>
     <table>
@@ -105,4 +110,3 @@
 </div>
 </body>
 </html>
-
