--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
         <td>이미지</td>
       </tr>
     </table>
+    <p>github : <a href="#">https://junwoochoi94.github.io/index.html</a></p>
+    <p>  blog : </span><a href="https://awesomeday94.tistory.com">https://awesomeday94.tistory.com</a></p>
   </div>
 </div>
 </body>
