--- a/index_eng.html
+++ b/index_eng.html
@@ -14,15 +14,15 @@
     <a href="./index_eng.html">English</a>
     </div>
   <div>
-  <h1>프로젝트 수행 이력</h1>
+  <h1>Project</h1>
   <div>
     <table>
       <caption>
-       1. AI기반 조난자 탐색 엔진 개발 
+       1. AIbased missing person search
       </caption>
       <tr>
-        <td>개 요</td>
-        <td>조난자 탐색을 위한 AI 엔진 개발(한국표준협회 교육과정)</td>
+        <td>summary</td>
+        <td>조난자 탐색을 위한 AI engine develop(한국표준협회 교육과정)</td>
       </tr>
             <tr>
         <td>세부내용</td>
