--- a/index_eng.html
+++ b/index_eng.html
@@ -21,88 +21,88 @@
        1. AIbased missing person search
       </caption>
       <tr>
-        <td>summary</td>
-        <td>조난자 탐색을 위한 AI engine develop(한국표준협회 교육과정)</td>
+        <td>Summary</td>
+        <td>AI engine develop for missing person isolated place (KSA Program)</td>
       </tr>
             <tr>
-        <td>세부내용</td>
-        <td>드론에 올릴수 있는 소형 GPU 전용 AI 경량 엔진 개발 및 성능 테스트 수행</td>
+        <td>Details</td>
+        <td>AI engine develop for Drone mounted mini GPU & Searching algorithm improve </td>
       </tr>
       <tr>
-        <td>소속기관 </td>
-        <td>AI 기반 혁신 인재 양성 프로그램</td>
+        <td>Program </td>
+        <td>Industrial Convergence AI Youth-innovator raise Program      </td>
       </tr>
       <tr>
-        <td>수행기간 </td>
-        <td>`19.06 ~`19.11(6개월)</td>
+        <td>Duration </td>
+        <td>6month(`19.06 ~`19.11)</td>
       </tr>
 
       <tr>
-        <td>실적</td>
-        <td>기업(무지개 연구소) 조난자 탐색 프로그램 엔진 채택 </td>
+        <td>Accomplishment</td>
+        <td>Co-working Company(Rainbow Lab) used missing person search algorithm  </td>
       </tr>
             <tr>
-        <td>데모</td>
+        <td>demo</td>
         <td><video src="./imgs/pj1.mp4" width="100%" controls /></td>
       </tr>
     </table>
     <table>
       <caption>
-        2. 고무제품 형상 설계 툴 개발
+        2. Rubbber Product Shape design Tool Develpment
       </caption>
       <tr>
-        <td>개 요</td>
-        <td>고무제품 전사 결과를 예측하기 위한 툴 개발</td>
+        <td>Summary</td>
+        <td>Rubber based Pad Printting result prediction Tool develop</td>
       </tr>
             <tr>
-        <td>세부내용</td>
-        <td>"PAD 프린팅"에 사용되는 패턴, PAD 형태, 전사 대상물 형체의 3가지 Input data를 통해 전사 결과물을 output으로 하는 엔진 개발 및 UI 개발 </td>
+        <td>Details</td>
+        <td> For 3 inputs (Printing Pattern, Pad shape, Object shape) get 1 output (printing result) engine develop  </td>
       </tr>
       <tr>
-        <td>소속기관 </td>
-        <td>영동테크 AI 연구소 (경북IT융합산업 기술원 과제)</td>
+        <td>Company </td>
+        <td>YDTC AI Lab (Gyeongbuk institute of IT Convergence Industry Technilogy Project)</td>
       </tr>
       <tr>
-        <td>수행기간 </td>
-        <td>`21.07 ~`22.12(6개월)</td>
+        <td>Duration </td>
+        <td>6month (`21.07 ~`22.12)</td>
       </tr>
 
       <tr>
-        <td>실적</td>
-        <td>개발 완료, 엔진 정확도 80%이상 달성 </td>
+        <td>Accomplishment</td>
+        <td>Project get good evaluated , accuracy 80% achievement </td>
       </tr>
             <tr>
-        <td>데모</td>
+        <td>demo</td>
         <td><img src="./imgs/pj1_img.png"/></td>
       </tr>
     </table>
         <table>
       <caption>
-        3. 고무제품 양불검사를 위한 AI 검사기 개발 
+        3. AI based Rubber product inspection machine develop  
       </caption>
       <tr>
-        <td>개 요</td>
-        <td>고무제품 자동검사를 위한 자동 검사기 개발</td>
+        <td>Summary</td>
+        <td> AI based Rubber product inspection machine develop  </td>
       </tr>
             <tr>
-        <td>세부내용</td>
-        <td>룰베이스 방식을 적용하기 어려운 고무제품에 AI기반 솔루션을 사용하여 제품 자동 검사기의 개발</td>
+        <td>Details</td>
+        <td> Rule-based inspection not suitable for Rubber product, so sort out with AI based Rubber product inspection machine develop</td>
       </tr>
       <tr>
-        <td>소속기관 </td>
-        <td>영동테크 AI 연구소(중기부 과제)</td>
+        <td>Company </td>
+        <td>YDTC AI Lab(Ministry of SMEs and Startups Project )</td>
       </tr>
       <tr>
-        <td>수행기간 </td>
-        <td>`21.07 ~`22.07(1년)</td>
+        <td>Duration </td>
+        <td>1 year(`21.07 ~`22.07)</td>
       </tr>
 
       <tr>
-        <td>실적</td>
-        <td>재현율: 96%이상 도달, 정밀도 : 90% 이상 도달 </td>
+        <td>Accomplishment</td>
+        <td>recall: 96%, accuracy : 90%  </td>
       </tr>
             <tr>
-        <td>데모</td>
+        <td>demo</td>
         <td>이미지</td>
       </tr>
     </table>
