--- a/index_eng.html
+++ b/index_eng.html
@@ -22,7 +22,7 @@
       </caption>
       <tr>
         <td>Summary</td>
-        <td>AI engine develop for missing person isolated place (KSA Program)</td>
+        <td>AI engine develop for missing person isolated place (Korea Standard Association Program)</td>
       </tr>
             <tr>
         <td>Details</td>
