--- a/index_eng.html
+++ b/index_eng.html
@@ -48,7 +48,7 @@
     </table>
     <table>
       <caption>
-        2. Rubbber Product Shape design Tool Develpment
+        2. Rubber Product Shape design Tool Develpment
       </caption>
       <tr>
         <td>Summary</td>
