--- a/index_eng.html
+++ b/index_eng.html
@@ -106,7 +106,10 @@
         <td>이미지</td>
       </tr>
     </table>
-  </div>
+    <p>github : <a href="#">https://junwoochoi94.github.io/index.html</a></p>
+    <p>  blog : </span><a href="https://awesomeday94.tistory.com">https://awesomeday94.tistory.com</a></p>
+    <p>  e-mail : tbh00228@gmail.com </p>
+    </div>
 </div>
 </body>
 </html>
