--- a/index_eng.html
+++ b/index_eng.html
@@ -73,7 +73,8 @@
       </tr>
             <tr>
         <td>demo</td>
-        <td><img src="./imgs/pj1_img.png"/></td>
+        <td><img src="./imgs/pj2_1.PNG"/></td>
+        <td><img src="./imgs/pj2_2.PNG"/></td>
       </tr>
     </table>
         <table>
