--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
       </tr>
             <tr>
         <td>데모</td>
-        <td><img src="./imgs/pj2_1.PNG"/></td>
-        <td><img src="./imgs/pj2_2.PNG"/></td>
+        <td><img src="./imgs/pj2_1.PNG"/><img src="./imgs/pj2_2.PNG"/></td>
+       
       </tr>
     </table>
         <table>
