--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </tr>
             <tr>
         <td>데모</td>
-        <td><img src="./imgs/pj2_1.PNG" width= "70%", height="70%" ><img src="./imgs/pj2-2.PNG" width= "70%", height="70%"></td>
+        <td><img src="./imgs/pj2_1.PNG" width= "70%", height="70%" ><hr></hr><img src="./imgs/pj2-2.PNG" width= "70%", height="70%"></td>
        
       </tr>
     </table>
