--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </tr>
             <tr>
         <td>데모</td>
-        <td>이미지</td>
+        <td><img src="./imgs/pj3_3.PNG" width= "70%", height="70%" ><video src="./imgs/pj3_1.mp4" width="100%" ><video src="./imgs/pj3_2.mp4" width="100%" > </td>
       </tr>
     </table>
     <p>e-mail : tbh00228@gmail.com</p>
