--- a/index_eng.html
+++ b/index_eng.html
@@ -73,8 +73,8 @@
       </tr>
             <tr>
         <td>demo</td>
-        <td><img src="./imgs/pj2_1.PNG"/></td>
-        <td><img src="./imgs/pj2_2.PNG"/></td>
+        <td><img src="./imgs/pj2_1.PNG" width= "70%", height="70%" ><hr style="border: 3px solid #ooo"/><img src="./imgs/pj2-2.PNG" width= "70%", height="70%"></td>
+
       </tr>
     </table>
         <table>
@@ -104,7 +104,7 @@
       </tr>
             <tr>
         <td>demo</td>
-        <td>이미지</td>
+        <td><img src="./imgs/pj3_3.PNG" width= "70%", height="70%" ><video src="./imgs/pj3_1.mp4" width="100%" ><video src="./imgs/pj3_2.mp4" width="100%" ></td>
       </tr>
     </table>
     <p>github : <a href="#">https://junwoochoi94.github.io/index.html</a></p>
