--- a/index.html
+++ b/index.html
@@ -36,10 +36,20 @@
         <td>수행기간 </td>
         <td>`19.06 ~`19.11(6개월)</td>
       </tr>
-
+      <tr>
+        <td>사용기술</td>
+        <td> 파이썬, Yolo, 영상처리  </td>
+      </tr>
+      
       <tr>
         <td>실적</td>
         <td>기업(무지개 연구소) 조난자 탐색 프로그램 엔진 채택 </td>
+      </tr>
+      <tr>
+        <td>주요업무</td>
+        <td>1. 영상 데이터 수집 - 프로젝트에 맞는 내려다보는 영상데이터 수집<br/>
+            2. 영상 데이터 전처리 - 영상 데이터 전처리<br/>
+            3. 알고리즘 Fine Tuning - 기존의 Yolo 알고리즘을 프로젝트에 목표에 맞게 박스 크기 조절 및 학습 </td>
       </tr>
             <tr>
         <td>데모</td>
@@ -66,10 +76,22 @@
         <td>수행기간 </td>
         <td>`21.07 ~`22.12(6개월)</td>
       </tr>
+      <tr>
+        <td>사용기술</td>
+        <td>파이썬, 영상처리, 오토인코더, blender, 3d printing </td>
+      </tr>
 
       <tr>
         <td>실적</td>
         <td>개발 완료, 엔진 정확도 80%이상 달성 </td>
+      </tr>
+      <tr>
+        <td>주요업무</td>
+        <td>1. Pad 형태 및 인쇄 패턴 설계 - blender로 고무 Pad의 형태 설계, Pad 프린트용 무늬 설계 <br/>
+            2. 실물 제품 출력 - Pad 설계 파일을 바탕으로 3d 프린트하여 실물 제품 출력<br/>
+            3. 영상 데이터 전처리 - 영상 데이터 전처리<br/>
+            4. 영상 데이터 수집 - 실물 pad 사진과 설계 파일 Gray 이미지와 인쇄  패턴의 영상 데이터 수집<br/>
+            5. Autoencoder 설계 - 3개의 이미지를 R,G,B 레이어에 배치하여 인쇄결과를 예측 할수 있는 알고리즘 개발</td>
       </tr>
             <tr>
         <td>데모</td>
@@ -99,8 +121,20 @@
       </tr>
 
       <tr>
+        <td>사용기술</td>
+        <td>파이썬, 영상처리, Resnet, PLC, GigaE 카메라, Image grabber </td>
+      </tr>
+      <tr>
         <td>실적</td>
         <td>재현율: 96%이상 도달, 정밀도 : 90% 이상 도달 </td>
+      </tr>
+      <tr>
+        <td>주요업무</td>
+        <td>1. 영상 데이터 수집 설계 - 사내 제품 불량기준 확립 및 데이터 수집 과정 설계<br/>
+            2. 자동화 기기 System Integration - 자동 검사기 PLC, GigaE 카메라, 촬영용 PC 시스템 통합<br/>
+            3. 영상 수집 - 자동화 기기를 통해 수집<br/>
+            4. 영상 전처리  - 영상 전처리<br/>
+            5. 자동 검사 알고리즘 개발 - Resnet 기반의 5채널 이미지 통합한 이진 분류 알고리즘 개발 </td>
       </tr>
             <tr>
         <td>데모</td>
