--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <td>`19.06 ~`19.11(6개월)</td>
       </tr>
       <tr>
-        <td>사용기술</td>
+        <td>사용기술 및 환경</td>
         <td> 파이썬, Yolo, 영상처리  </td>
       </tr>
       
@@ -77,7 +77,7 @@
         <td>`21.07 ~`22.12(6개월)</td>
       </tr>
       <tr>
-        <td>사용기술</td>
+        <td>사용기술 및 환경</td>
         <td>파이썬, 영상처리, 오토인코더, blender, 3d printing </td>
       </tr>
 
@@ -121,7 +121,7 @@
       </tr>
 
       <tr>
-        <td>사용기술</td>
+        <td>사용기술 및 환경</td>
         <td>파이썬, 영상처리, Resnet, PLC, GigaE 카메라, Image grabber </td>
       </tr>
       <tr>
@@ -141,6 +141,58 @@
         <td><img src="./imgs/pj3_3.PNG" width= "70%", height="70%" ><video src="./imgs/pj3_1.mp4" width="100%" ><video src="./imgs/pj3_2.mp4" width="100%" > </td>
       </tr>
     </table>
+    <table>
+      <caption>
+        4. 상품 데이터 요약 프로젝트 
+      </caption>
+      <tr>
+        <td>개 요</td>
+        <td>자연어 처리를 이용한 상품 정보 추출 알고리즘 개발</td>
+      </tr>
+            <tr>
+        <td>세부내용</td>
+        <td>BERT 기반의 계계독해 알고리즘을 통해 상품 정보 추출</td>
+      </tr>
+      <tr>
+        <td>소속기관 </td>
+        <td>개인 프로젝트</td>
+      </tr>
+      <tr>
+        <td>수행기간 </td>
+        <td>'23.08.03~'23.08.10(7일)</td>
+      </tr>
+
+      <tr>
+        <td>사용기술 및 환경</td>
+        <td>파이썬, 자연어 처리, BERT, 토크나이징, Google colab </td>
+      </tr>
+      <tr>
+        <td>실적</td>
+        <td>브랜드와 제품 타입 추출 가능</td>
+      </tr>
+      <tr>
+        <td>한계점</td>
+        <td>제품 모델명 추출 못함 - 추가 개발을 통해 성능 향샹 요구됨 </td>
+      </tr>
+      <tr>
+        <td>주요업무</td>
+        <td>1. 데이터 전처리 - 원본 테이블에서 브랜드, 제품 타입, 제품 모델을 추출 가능한 테이블만 따로 저장<br/>
+            2. 데이터 셋 분석 - Input 테이블의 길이를 기준으로 분포표 출력<br/>
+            3. 데이터 파이프 라인 구련 - BERT 입출력 형식에 맞게 변환<br/>
+            4. 토크나이징  - 상품명 데이터열에 있는 문자열을 분리<br/>
+            5. 데이터 정규화 - 가장 긴 문장을 기준으로 데이터 크기를 통일<br/>
+            6. 학습 - 데이터셋 분리 및 학습 <br/>
+            7. 결과 확인 - 학습에 사용되지 않은 데이터를 기준으로 확인
+        </td>
+      </tr>
+            <tr>
+        <td>데모</td>
+        <td><img src="./imgs/pj4_1.PNG" width= "70%", height="70%" ><img src="./imgs/pj4_2.PNG" width= "70%", height="70%" > </td>
+      </tr>
+    </table>
+
+
+          
     <p>e-mail : tbh00228@gmail.com</p>
     <p>github : <a href="#">https://junwoochoi94.github.io/index.html</a></p>
     <p>  blog : </span><a href="https://awesomeday94.tistory.com">https://awesomeday94.tistory.com</a></p>
