--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </tr>
             <tr>
         <td>세부내용</td>
-        <td>"PAD 프린팅"에 사용되는 패턴, PAD 형태, 전사 대상물 형체의 3가지 Input data를 통해 전사 결과물을 output으로 하는 엔진 개발 및 UI 개발 </td>
+        <td>"Pad 프린팅"에 사용되는 패턴, Pad 형태, 전사 대상물 형체의 3가지 Input data를 통해 전사 결과물을 output으로 하는 엔진 개발 및 UI 개발 </td>
       </tr>
       <tr>
         <td>소속기관 </td>
@@ -90,7 +90,7 @@
         <td>1. Pad 형태 및 인쇄 패턴 설계 - blender로 고무 Pad의 형태 설계, Pad 프린트용 무늬 설계 <br/>
             2. 실물 제품 출력 - Pad 설계 파일을 바탕으로 3d 프린트하여 실물 제품 출력<br/>
             3. 영상 데이터 전처리 - 영상 데이터 전처리<br/>
-            4. 영상 데이터 수집 - 실물 pad 사진과 설계 파일 Gray 이미지와 인쇄  패턴의 영상 데이터 수집<br/>
+            4. 영상 데이터 수집 - 실물 Pad 사진과 설계 파일 Gray 이미지와 인쇄  패턴의 영상 데이터 수집<br/>
             5. Autoencoder 설계 - 3개의 이미지를 R,G,B 레이어에 배치하여 인쇄결과를 예측 할수 있는 알고리즘 개발</td>
       </tr>
             <tr>
