--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <td>`19.06 ~`19.11(6개월)</td>
       </tr>
       <tr>
-        <td>사용기술 및 환경</td>
+        <td>개발환경<BR/>사용기술</td>
         <td> 파이썬, Yolo, 영상처리  </td>
       </tr>
       
@@ -77,7 +77,7 @@
         <td>`21.07 ~`22.12(6개월)</td>
       </tr>
       <tr>
-        <td>사용기술 및 환경</td>
+        <td>개발환경<BR/>사용기술</td>
         <td>파이썬, 영상처리, 오토인코더, blender, 3d printing </td>
       </tr>
 
@@ -121,7 +121,7 @@
       </tr>
 
       <tr>
-        <td>사용기술 및 환경</td>
+        <td>개발환경<BR/>사용기술</td>
         <td>파이썬, 영상처리, Resnet, PLC, GigaE 카메라, Image grabber </td>
       </tr>
       <tr>
@@ -163,7 +163,7 @@
       </tr>
 
       <tr>
-        <td>사용기술 및 환경</td>
+        <td>개발환경<BR/>사용기술</td>
         <td>파이썬, 자연어 처리, BERT, 토크나이징, Google colab </td>
       </tr>
       <tr>
