--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
       </tr>
             <tr>
         <td>데모</td>
-        <td><img src="./imgs/pj2_1.PNG" width= "60%", height="60%" ><hr style="border: 3px solid #ooo"/><img src="./imgs/pj2-2.PNG" width= "60%", height="60%"></td>
-        <td><img src="./imgs/pj2_2.PNG" width= "60%", height="60%" ><hr style="border: 3px solid #ooo"/><img src="./imgs/pj2-2.PNG" width= "60%", height="60%"></td>
+        <td><img src="./imgs/pj2_1.PNG" width= "60%", height="60%" ><hr style="border: 3px solid #ooo"/><img src="./imgs/pj2-2.PNG" width= "60%", height="60%"><hr style="border: 3px solid #ooo"/><img src="./imgs/pj2-3.PNG" width= "60%", height="60%"></td>
+        
        
       </tr>
     </table>
