--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </tr>
       <tr>
         <td>개발환경<BR/>사용기술</td>
-        <td>파이썬, 영상처리, 오토인코더, blender, 3d printing </td>
+        <td>파이썬, PyQt, 영상처리, 오토인코더, blender, 3d printing </td>
       </tr>
 
       <tr>
