--- a/index.html
+++ b/index.html
@@ -192,7 +192,52 @@
       </tr>
     </table>
 
+    <table>
+      <caption>
+        5. GECD( Glass Edge Crack Detection)
+      </caption>
+      <tr>
+        <td>개 요</td>
+        <td>Glass Edge의 Crack ,dust 등을 검출 </td>
+      </tr>
+            <tr>
+        <td>세부내용</td>
+        <td> 디스플레이 패널의 외곽부에 불량을 검출 </td>
+      </tr>
+      <tr>
+        <td>소속기관 </td>
+        <td>가온 솔루션</td>
+      </tr>
+      <tr>
+        <td>수행기간 </td>
+        <td>'24.01.08~'25.01(진행예정)</td>
+      </tr>
 
+      <tr>
+        <td>개발환경<BR/>사용기술</td>
+        <td>CPP, MFC, 영상처리, PLC 통신, Euresys vision </td>
+      </tr>
+      <tr>
+        <td>실적</td>
+        <td>디스플레이 외곽부 불량 검출 완료</td>
+      </tr>
+      <tr>
+        <td>한계점</td>
+        <td>디스플레이 개발 공정별 최적화 한계로 지연 시간 발생 </td>
+      </tr>
+      <tr>
+        <td>주요업무</td>
+        <td>1. 데이터 학습 - 패널 외곽부 사진을 기반으로 불량 학습 수행 및 평가<br/>
+            2. PLC 통신 - 공정별 PLC에 맞게 통신 테스트 수행<br/>
+            3. UI 최적화  - 엔지니어 요구사항에 맞게 UI 변경 <br/>
+            4. 사용 설명서 - UI 기능별 사용 설명서 제작 <br/>
+        </td>
+      </tr>
+            <tr>
+        <td>데모</td>
+        <td><img src="./imgs/pj5_1.PNG" width= "50%", height="50%" ><img src="./imgs/pj5_2.PNG" width= "50%", height="50%" > </td>
+      </tr>
+    </table>
           
     <p>e-mail : tbh00228@gmail.com</p>
     <p>github : <a href="#">https://junwoochoi94.github.io/index.html</a></p>
